crates/compiler/cypress/tests/snapshots/test_parse__nested_if_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "if t1 then\n  1\nelse if t2 then\n  2\nelse\n  3\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginIf
            Ident=>LowerIdent@1
            InlineKwThen=>KwThen@2
            (BeginBlock HintExpr Num=>Int@3 EndBlock)
            InlineKwElse=>KwElse@4
            Ident=>LowerIdent@6
            InlineKwThen=>KwThen@7
            (BeginBlock HintExpr Num=>Int@8 EndBlock)
            InlineKwElse=>KwElse@9
            (BeginBlock HintExpr Num=>Int@10 EndBlock)
        EndIf)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
If([(Ident("t1"), Block([IntBase10("1")])), (Ident("t2"), Block([IntBase10("2")]))], Block([IntBase10("3")]))

[=== formatted below ===]

