crates/compiler/cypress/tests/snapshots/test_parse__nested_module_header_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "interface Foo.Bar.Baz exposes [] imports []\n\n"
---
(BeginFile
    (BeginHeaderInterface
        (* (* ModuleName=>UpperIdent@1 DotModuleUpperIdent) DotModuleUpperIdent)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderInterface)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

