crates/compiler/cypress/tests/snapshots/test_parse__newline_after_equals_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "x =\n    5\n\n42\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginBlock HintExpr Num=>Int@2 EndBlock)
        EndAssignDecl)
        HintExpr
        Num=>Int@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), Block([IntBase10("5")]))
IntBase10("42")

[=== formatted below ===]

