crates/compiler/cypress/tests/snapshots/test_parse__newline_after_paren_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "A\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr UpperIdent=>UpperIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UpperIdent("A")

[=== formatted below ===]

